--- a/src/main/webapp/styles/default.css
+++ b/src/main/webapp/styles/default.css
@@ -2,27 +2,51 @@ body {
 	background-color: #F7FFCC;
 	color: #003300;
 	font-family: sans-serif;
+	margin: 0.5em 20%;
 }
 
-nav ul {
+nav {
+	float: left;
+	padding-right: 0.5em;	
+	margin-top: -1em;;
+	
+}
+
+nav ul {	
+	list-style-type: none;
 	background: #006600;
-	padding: 0.4em 0;
+	padding: 0.5em 0;
+	width: 11.5em;
 }
 
-nav li {
+/* 	horizontal menu
+	nav li {
 	display: inline;
-}
+}*/
 
 nav li a,#logoutbutton {
 	color: white;
 	font-weight: bold;
-	padding-left: 0.5em;
+	font-size: 0.8em;
+	padding: 0.3em 0.5em;
 	text-decoration: none;
+	text-transform: uppercase;
 	vertical-align: middle;
+	/* vertical menu */
+    display: block;
+    width: 12em;
 }
 
 nav li a:hover,#logoutbutton:hover {
 	color: #F7FFCC;
+}
+
+.maincontent {
+	overflow: hidden;
+    padding: 1em; 
+    margin: 0.5em; 
+    margin-right: 0;  
+    border: 2px solid #006600
 }
 
 h1 {
